<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/softBlue"
            android:orientation="horizontal">

            <include layout="@layout/widget_movie_thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/item_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:lines="1"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/accentBlue"
                    android:textStyle="bold"
                    tools:text="@string/placeholder_small" />

                <include layout="@layout/widget_movie_header" />

                <TextView
                    android:id="@+id/item_movie_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_light"
                    android:gravity="clip_horizontal"
                    android:lines="7"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    tools:text="@string/placeholder_large" />

                <View
                    android:id="@+id/item_movie_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/item_movie_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_chevron_right_blue"
                    android:focusable="true"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="fill_horizontal"
                    android:lines="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/more_text"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
